# tiny-blockchain

./: .gitignore  CMakeLists.txt  LICENSE  README.md  block.c  block.h  blockchain.c  blockchain.h  main.c  main.cpp
include/: BigInt.hpp  Block.hpp  Blockchain.hpp  Constants.hpp  Transaction.hpp  Utils.hpp
src/: Block.cpp  Blockchain.cpp  Transaction.cpp  Utils.cpp
